finished the major functionalities of botanica. Now the plants will grow up and consume water, as well as producing fruits. User can harvest fruits, water plants, and sell fruits. May need further review of the codes. Currently there's no discovered bugs but this does not guarantee everything. Need to keep the components alive when shifting routs. Need to write restful api request functionalities.

--- a/src/styles/addplantmodal.css
+++ b/src/styles/addplantmodal.css
@@ -5,7 +5,7 @@
     left: 0px;
     top: 0px;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 10;
+    z-index: 30;
 }
 
 .addPlantBox .addPlantWindow {
